correcciones de lint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header></header>
+<utilities-header></utilities-header>
 
-<sidebar>
+<utilities-sidebar>
 	<div class="container">
 		<router-outlet></router-outlet>
 	</div>
-</sidebar>
+</utilities-sidebar>
