cambio de estilo en el header y sidebar y cambio de la estructura de la aplicación.

--- a/src/app/exceltojson/exceltojson.component.html
+++ b/src/app/exceltojson/exceltojson.component.html
@@ -1,11 +1,9 @@
 
 <h1>Excel to JSON</h1>
 
-<md-card class="configuration-card">
+<!-- <md-card class="configuration-card">
 	<md-card-header>
-		<!-- <div md-card-avatar class="example-header-image"></div> -->
 		<md-card-title>Upload file</md-card-title>
-		<!-- <md-card-subtitle>Set settings</md-card-subtitle> -->
 	</md-card-header>
 
 	<md-card-content class="row">
@@ -73,4 +71,4 @@
 	<md-card-actions>
 		<a class="link-download" md-raised-button color="primary" (click)="downloadJSON(btngetjson)" #btngetjson>Get json</a>
 	</md-card-actions>
-</md-card>
+</md-card> -->
