--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,6 @@
-<md-toolbar color="primary">
-	<span>Utilities</span>
-
-	<!-- This fills the remaining space of the current row -->
-	<span class="example-fill-remaining-space"></span>
-
-	<span>Hi, I'm Oscar Pulido!</span>	
-	<img src="assets/me.jpeg" alt="Oscar Pulido" class="perfil-image">
-</md-toolbar>
+<nav class="navbar navbar-expand-lg libs-headers">
+	<a class="navbar-brand mr-auto">Libreries</a>
+	
+	<span class="navbar-text">Hi, I'm Oscar Pulido</span>
+	<img src="assets/me.jpeg" alt="Oscar Pulido" class="perfil-image d-inline-block align-top">
+</nav>
