--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,33 +1,31 @@
 @import '../../scss/variables';
 
-.example-sidenav-fab-container {
-	width: 100%;
-	height: 100%;
-	border: 1px solid $very-light-border;
-}
-  
-.example-sidenav-fab-container md-sidenav {
-	width: 150pt;
-}
-  
-.example-sidenav-fab-container .mat-sidenav-content,
-.example-sidenav-fab-container md-sidenav {
-	display: flex;
-	overflow: visible;
-}
-  
-.example-scrolling-content {
-	overflow: auto;
-	width: 100%;
-	border-right: 1px solid $very-light-border;
-}
-  
-.example-fab.mat-mini-fab {
+.libs-sidebar{
 	position: absolute;
-	right: 20px;
-	bottom: 10px;
+	background-color: $ligth-black;
+	width: 15%;
+	height: 100%;
+	display: inline-block;
+	padding: 2em 1em 0 1em;
+	box-shadow: 2px 2px 5px $semi-light-black;
+	-webkit-box-shadow: 2px 2px 5px $semi-light-black;
+	-moz-box-shadow: 2px 2px 5px $semi-light-black;
 }
 
-md-list-item h4{
-	cursor: pointer;
+.libs-sidebar___section{
+	.title{
+		width: 100%;
+		height: 100%;
+		border-bottom: 1px dashed $black;
+	}
+	ul {
+		list-style: none;
+	}
+	a{
+		text-decoration: none;
+		color: $black;
+		&:hover{
+			color: $green;
+		}
+	}
 }
