--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,5 @@
-$very-light-border: #E0E0E0;
+$dark-green: #818C83;
+$green: #98A69A;
+$black: #262626;
+$semi-light-black: #403F3D;
+$ligth-black: #73706F;
