implementación de utilidad exceltojson

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,7 +2,7 @@
 
 
 .libs-headers{
-    background-color: $ligth-black;
+    background-color: $side-nav___background;
     box-shadow: 2px 2px 5px $semi-light-black;
 	-webkit-box-shadow: 2px 2px 5px $semi-light-black;
 	-moz-box-shadow: 2px 2px 5px $semi-light-black;
