--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
 		</p>
 		<ul>
 			<li>
-				<a [routerLink]="'exceltojson'">Excel to json</a>
+				<a routerLink="exceltojson">Excel to json</a>
 			</li>
 		</ul>
 	</section>
