--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,8 @@ $green: #98A69A;
 $black: #262626;
 $semi-light-black: #403F3D;
 $ligth-black: #73706F;
+$white: #ffffff;
+
+
+
+$side-nav___background: $green;
