--- a/src/app/exceltojson/exceltojson.component.html
+++ b/src/app/exceltojson/exceltojson.component.html
@@ -1,5 +1,28 @@
+<div class="container">
 
-<h1>Excel to JSON</h1>
+	<div class="row">
+		<div class="form-container col-12 col-md-6">
+			<form [formGroup]="form">
+				<div>
+					<input type="radio" value="D" formControlName="properiesSource" id="defaultRadio">
+					<label for="defaultRadio">Default properties</label>
+				</div>
+	
+				<div>
+					<input type="radio" value="C" formControlName="properiesSource" id="customRadio">
+					<label for="customRadio">Custom properties</label>
+				</div>
+			</form>
+		</div>
+
+		<div class="dropzone-container col-12 col-md-6">
+
+		</div>
+	</div>
+
+
+
+</div>
 
 <!-- <md-card class="configuration-card">
 	<md-card-header>
