--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,4 +1,23 @@
+@import '../../scss/variables';
+
 .container-fluid{
     width: 100%;
     height: 100%;
+}
+
+.main{
+    width: 84%;
+    height: 100%;
+    max-height: 100%;
+    float: right;
+    margin-top: 0.5em;
+    background-color: $white;
+    box-shadow: 2px 2px 5px $semi-light-black;
+	-webkit-box-shadow: 2px 2px 5px $semi-light-black;
+	-moz-box-shadow: 2px 2px 5px $semi-light-black;
+}
+
+
+.component-title{
+    padding: 1em 0 0 2em;
 }
